// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`issue-17239.ts - {"objectWrap":"collapse"} format[typescript]} 1`] = `
====================================options=====================================
objectWrap: "collapse"
parsers: ["typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({ loading: false, savingStatus: "idle", undoDisabled: false, aiFocused: false, online: true }));

=====================================output=====================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({
    loading: false,
    savingStatus: "idle",
    undoDisabled: false,
    aiFocused: false,
    online: true,
  }));

================================================================================
`;

exports[`issue-17239.ts format[typescript]} 1`] = `
====================================options=====================================
parsers: ["typescript", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({ loading: false, savingStatus: "idle", undoDisabled: false, aiFocused: false, online: true }));

=====================================output=====================================
model = types
  .model({ something: mxSomething })
  .volatile<[foo]>((self) => ({
    loading: false,
    savingStatus: "idle",
    undoDisabled: false,
    aiFocused: false,
    online: true,
  }));

================================================================================
`;
